@@ -1,5 +1,8 @@
 2016-09-11  Allen D. Ball  <ball@sol.local>
 
+	* src/main/java/ball/http/client/JSONResponseHandler.java:
+	Initial writing.
+
 	* src/main/java/ball/http/client/method/AnnotatedHttpUriRequest.java:
 	Avoid infinite recursion in
 	AnnotatedHttpUriRequest.getAllHeaders() implementations.
